--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+models/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
