--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,46 @@
 alembic==1.4.2
 aniso8601==8.0.0
 attrs==19.3.0
+autopep8==1.5.3
+cachetools==4.1.1
+certifi==2020.6.20
+chardet==3.0.4
 click==7.1.2
 Flask==1.1.2
 Flask-Migrate==2.5.3
 flask-restx==0.2.0
 Flask-SQLAlchemy==2.4.3
+google-api-core==1.21.0
+google-auth==1.18.0
+google-cloud==0.34.0
+google-cloud-bigquery==1.25.0
+google-cloud-core==1.3.0
+google-resumable-media==0.5.1
+googleapis-common-protos==1.52.0
+idna==2.10
 importlib-metadata==1.7.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
 jsonschema==3.2.0
 Mako==1.1.3
 MarkupSafe==1.1.1
+numpy==1.19.0
+pandas==1.0.5
+protobuf==3.12.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.6.0
 pyrsistent==0.16.0
 python-dateutil==2.8.1
 python-dotenv==0.13.0
 python-editor==1.0.4
 pytz==2020.1
+requests==2.24.0
+rsa==4.6
 six==1.15.0
 SQLAlchemy==1.3.18
+toml==0.10.1
+urllib3==1.25.9
+uuid==1.30
 Werkzeug==1.0.1
 zipp==3.1.0
