--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+-e git://github.com/ihorhrysha/model-trainer.git#egg=model-trainer
 alembic==1.4.2
 aniso8601==8.0.0
 attrs==19.3.0
@@ -12,7 +13,6 @@ flask-restx==0.2.0
 Flask-SQLAlchemy==2.4.3
 google-api-core==1.21.0
 google-auth==1.18.0
-google-cloud==0.34.0
 google-cloud-bigquery==1.25.0
 google-cloud-core==1.3.0
 google-resumable-media==0.5.1
@@ -35,7 +35,9 @@ python-dateutil==2.8.1
 python-dotenv==0.13.0
 python-editor==1.0.4
 pytz==2020.1
+sklearn==0.0
 requests==2.24.0
+rq==1.4.3
 rsa==4.6
 six==1.15.0
 SQLAlchemy==1.3.18
